server-service-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: twinder-svc
  labels:
    app: twinder
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: twinder
