ingress-def.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: twinder.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twinder-svc
                port:
                  number: 8080
